# y-pydantic

./: README.md  pyproject.toml
notebooks/: 01_y_py_basics.ipynb  02_y_pydantic_intro.ipynb
src/y_pydantic/: __init__.py  bindings.py  clients.py
