[tool.poetry]
name = "y-pydantic"
version = "0.1.0"
description = "Y-py bindings to Pydantic models"
authors = ["Kafonek <matt.kafonek@noteable.io>"]

[tool.poetry.dependencies]
python = "^3.9"
y-py = "^0.5.4"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.10.0"
pytest = "^7.1.3"
jupyter = "^1.0.0"
notebook = "^6.5.1"
nb-black = "^1.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
